# McStasToX

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  overall_demo.ipynb  pixi.toml  pyproject.toml  ruff.toml  scipp_demo.ipynb  search.html  searchindex.js  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish-to-pip.yml  pypi.yml  test.yml
_sources/: index.md
_sources/about/: index.md
_sources/api-reference/: index.md
_sources/developer/: getting-started.md
_sources/user-guide/: overall_demo.ipynb
_static/: documentation_options.js
about/: index.html
api-reference/: index.html
developer/: coding-conventions.html  getting-started.html  index.html
docs/: conf.py  index.md
docs/_templates/: doc_version.html
docs/about/: index.md
docs/api-reference/: index.md
docs/developer/: dependency-management.md  getting-started.md  index.md
docs/user-guide/: index.md  installation.md  overall_demo.ipynb  read_example.py  scipp_demo.ipynb
mcstastox/: ReadNeXus.py  __init__.py
requirements/: base.in  base.txt  basetest.txt  ci.in  ci.txt  dev.txt  docs.in  docs.txt  make_base.py  mypy.txt  nightly.in  nightly.txt  static.txt  wheels.txt
src/mcstastox/: LoadFile.py  ReadNeXus.py  __init__.py
tests/: mcstas_config_test.py  package_test.py
user-guide/: index.html  installation.html  overall_demo.html  overall_demo.ipynb  scipp_demo.html  scipp_demo.ipynb
