[build-system]
requires = [
  "setuptools>=77",
  "setuptools_scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "mcstastox"
description = "Tool to read McStas NeXus data and export contained information"
authors = [{name = "Mads Bertelsen"}, {name = "mccode contributors"}]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.10"

# IMPORTANT:
# Run 'pixi reinstall' after making changes here. This will update requirement files.
# Make sure to list one dependency per line.
dependencies = [
    "h5py",
    "numpy",
]

dynamic = ["version"]

[project.optional-dependencies]
scipp = [
    "scipp>=25.0.0",
]

test = [
    "pytest>=7.0",
]

docs = [
	"autodoc-pydantic",
    "ipykernel",
    "ipython!=8.7.0",
    "ipywidgets>=8.1",
    "myst-parser",
    "nbsphinx",
    "numba>=0.63",
    "pydata-sphinx-theme>=0.14",
    "sphinx>=7",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-design",
]

[project.urls]
"Bug Tracker" = "https://github.com/mccode-dev/mcstastox/issues"
"Documentation" = "https://mccode-dev.github.io/mcstastox"
"Source" = "https://github.com/mccode-dev/mcstastox"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
--strict-config
--strict-markers
--import-mode=importlib
-ra
-v
"""
testpaths = "tests"
filterwarnings = [
  "error",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_unreachable = true

